# borg

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  SECURITY.md  TODO.md  deny.toml  lefthook.yml  rust-toolchain.toml  todo.md
crates/apply-patch/: Cargo.toml
crates/apply-patch/src/: apply.rs  lib.rs  parser.rs  seek_sequence.rs
crates/apply-patch/tests/: patch_integration.rs
crates/borg-proto/: Cargo.toml  build.rs
crates/borg-proto/proto/: admin.proto  capability.proto  session.proto  status.proto
crates/borg-proto/src/: capabilities.rs  lib.rs
crates/borgd/: Cargo.toml
crates/borgd/src/: daemon.rs  lib.rs  main.rs  paths.rs  pidlock.rs
crates/borgd/src/grpc/: admin.rs  capability.rs  mod.rs  session.rs  status.rs
crates/borgd/src/session/: backend.rs  buffer.rs  convert.rs  mod.rs  prompts.rs
crates/borgd/tests/: multi_client_broadcast.rs  single_writer_lock.rs  uds_smoke.rs
crates/cli/: Cargo.toml
crates/cli/src/: api_key_store.rs  credentials.rs  heartbeat_augmenters.rs  logo.rs  main.rs  migrate_tui.rs  onboarding.rs  onboarding_tui.rs  openrouter_catalog.rs  plugins.rs  repl.rs  service.rs  update.rs
crates/cli/src/commands/: export.rs  misc.rs  mod.rs  pairing.rs  projects.rs  settings.rs  status.rs  tasks.rs
crates/cli/src/daemon_client/: connect.rs  event_stream.rs  mod.rs
crates/cli/src/service/: install.rs  mod.rs
crates/cli/src/tui/: app.rs  btw_popup.rs  colors.rs  command_popup.rs  commands.rs  composer.rs  customize_popup.rs  diff_render.rs  external_editor.rs  file_popup.rs  file_search.rs  goodbye.rs  highlight.rs  history.rs  layout.rs  line_utils.rs  markdown.rs  migrate_popup.rs  mod.rs  model_popup.rs  pairing_popup.rs  paste_burst.rs  plan_overlay.rs  plugins_popup.rs  popup_utils.rs  projects_popup.rs  schedule_popup.rs  sessions_popup.rs  settings_popup.rs  shimmer.rs  skills_popup.rs  spinner.rs  status_popup.rs  theme.rs  toast.rs  tool_display.rs  transcript_pager.rs  wrapping.rs
crates/cli/templates/: IDENTITY.md  SETUP.md
crates/core/: Cargo.toml
crates/core/skills/1password/: SKILL.md
crates/core/skills/browser/: SKILL.md
crates/core/skills/calendar/: SKILL.md
crates/core/skills/database/: SKILL.md
crates/core/skills/discord/: SKILL.md
crates/core/skills/docker/: SKILL.md
crates/core/skills/email/: SKILL.md
crates/core/skills/git/: SKILL.md
crates/core/skills/github/: SKILL.md
crates/core/skills/http/: SKILL.md
crates/core/skills/notes/: SKILL.md
crates/core/skills/paperclip/: SKILL.md
crates/core/skills/scheduler/: SKILL.md
crates/core/skills/search/: SKILL.md
crates/core/skills/skill-creator/: SKILL.md
crates/core/skills/slack/: SKILL.md
crates/core/skills/weather/: SKILL.md
crates/core/src/: activity_log.rs  agent.rs  bond.rs  browser.rs  channel_names.rs  chunker.rs  claude_cli.rs  config.rs  config_watcher.rs  consolidation.rs  constants.rs  conversation.rs  daily_summary.rs  db.rs  db_key.rs  doctor.rs  embeddings.rs  error_format.rs  evolution.rs  export.rs  gateway_context.rs  git.rs  hmac_chain.rs  hooks.rs  host_audit.rs  identity.rs  image_gen.rs  integrity.rs  internal_tag_filter.rs  lib.rs  llm.rs  llm_error.rs  logging.rs  maintenance.rs  media.rs  media_understanding.rs  memory.rs  memory_watcher.rs  mentions.rs  mmr.rs  (+40 more)
crates/core/src/agent/: btw.rs  mod.rs  system_prompt.rs  tool_classification.rs
crates/core/src/browser/: actions.rs  console.rs  detection.rs  health.rs  mod.rs  tabs.rs  validate.rs  wait.rs
crates/core/src/config/: gateway.rs  llm.rs  maintenance.rs  media.rs  mod.rs  security.rs  settings_macro.rs  settings_table.rs  tests.rs
crates/core/src/db/: activity.rs  delivery.rs  maintenance.rs  memory.rs  meta.rs  migrations.rs  mod.rs  models.rs  multi_agent.rs  pairing.rs  plugins.rs  scripts.rs  sessions.rs  settings.rs  skill_audit.rs  tasks.rs  tests.rs  usage.rs  vitals.rs  workflow.rs
crates/core/src/evolution/: celebration.rs  classification.rs  commands.rs  feed.rs  format.rs  helpers.rs  hmac.rs  keychain.rs  milestones.rs  mod.rs  plan_emission.rs  replay.rs  share_card.rs  signature.rs  xp.rs
crates/core/src/hooks/: script.rs
crates/core/src/integrations/: gmail.rs  google_calendar.rs  http.rs  linear.rs  mod.rs  notion.rs  outlook.rs
crates/core/src/llm/: anthropic.rs  mod.rs
crates/core/src/memory/: injection.rs  mod.rs
crates/core/src/migrate/: apply.rs  hermes.rs  mod.rs  openclaw.rs  plan.rs
crates/core/src/multi_agent/: mod.rs  names.rs  roles.rs  tools.rs
crates/core/src/tool_handlers/: filesystem.rs  list.rs  media.rs  memory.rs  mod.rs  projects.rs  schedule.rs  (+4 more)
crates/core/templates/: security_policy.md  workflow_guidance.md
crates/core/tests/: chunker_integration.rs  db_integration.rs  hooks_e2e.rs  llm_integration.rs  memory_integration.rs  project_doc_integration.rs  rate_guard_integration.rs  sanitize_integration.rs  settings_integration.rs  sqlcipher_integration.rs  stack_depth.rs  tool_integration.rs  vitals_integration.rs
crates/customizations/: Cargo.toml
crates/customizations/src/: catalog.rs  installer.rs  keychain.rs  lib.rs  verifier.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auto_reply.rs  backoff.rs  challenge_throttle.rs  channel_init.rs  channel_trait.rs  chunker.rs  circuit_breaker.rs  commands.rs  constants.rs  crypto.rs  dedup.rs  error_dedup.rs  executor.rs  handler.rs  health.rs  http_retry.rs  in_flight.rs  lib.rs  link_understanding.rs  manifest.rs  plain_text.rs  rate_limit.rs  registry.rs  retry.rs  rich_content.rs  routing.rs  server.rs  session_queue.rs  typing_keepalive.rs  verify_common.rs
crates/gateway/tests/: handler_integration.rs  routing_integration.rs  slack_integration.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: lib.rs  scheduler.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: bubblewrap.rs  lib.rs  network_proxy.rs  policy.rs  runner.rs  seatbelt.rs
crates/tools/: Cargo.toml
crates/tools/src/: executor.rs  lib.rs  manifest.rs  registry.rs  runner.rs  scan.rs
(+199 files in other folders)
