[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/theognis1002/tamagotchi"

[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/heartbeat",
    "crates/tools",
    "crates/sandbox",
    "crates/apply-patch",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
which = "7"
futures = "0.3"
futures-util = "0.3"
dirs = "6"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
inquire = "0.7"
tiktoken-rs = "0.9"
dotenvy = "0.15"
ratatui = "0.29"
tui-textarea = "0.7"
pulldown-cmark = "0.12"
textwrap = "0.16"
unicode-width = "0.2"

[workspace.lints.clippy]
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
expect_used = "deny"
unwrap_used = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
