[package]
name = "tamagotchi-apply-patch"
description = "Patch DSL parser and filesystem applicator for Tamagotchi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
