[package]
name = "borg-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "gRPC schema for the borgd daemon and its clients."

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
