[package]
name = "borgd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Borg agent daemon — long-running gRPC host."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "borgd"
path = "src/main.rs"

[dependencies]
borg-proto = { path = "../borg-proto" }
borg-core = { path = "../core" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
fs2 = { workspace = true }
libc = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
