[package]
name = "tamagotchi-cli"
description = "CLI for the Tamagotchi AI personal assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tamagotchi"
path = "src/main.rs"

[dependencies]
tamagotchi-core = { path = "../core" }
tamagotchi-heartbeat = { path = "../heartbeat" }
tamagotchi-tools = { path = "../tools" }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
inquire = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }
pulldown-cmark = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
tokio-util = "0.7"
tempfile = { workspace = true }

[lints]
workspace = true
