[package]
name = "borg-cli"
description = "CLI for the Borg AI personal assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "borg"
path = "src/main.rs"

[dependencies]
borg-core = { path = "../core" }
borg-heartbeat = { path = "../heartbeat" }
borg-gateway = { path = "../gateway" }
borg-plugins = { path = "../plugins" }
tokio = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }
pulldown-cmark = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
iana-time-zone = "0.1"
reqwest = { workspace = true }
tokio-util = { workspace = true }
tracing-appender = { workspace = true }
tempfile = { workspace = true }
throbber-widgets-tui = { workspace = true }
ignore = { workspace = true }
libc = "0.2"
arboard = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }

[lints]
workspace = true
