[package]
name = "borg-core"
description = "Core agent loop, LLM client, memory, and config for Borg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borg-tools = { path = "../tools" }
borg-apply-patch = { path = "../apply-patch" }
tokio = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
tiktoken-rs = { workspace = true }
tokio-util = "0.7"
rand = "0.9"
rusqlite = { workspace = true }
scraper = { workspace = true }
cron = { workspace = true }
regex = { workspace = true }
pdf-extract = { workspace = true }
shellexpand = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
