[package]
name = "borg-core"
description = "Core agent loop, LLM client, memory, and config for Borg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borg-apply-patch = { path = "../apply-patch" }
borg-sandbox = { path = "../sandbox" }
borg-tools = { path = "../tools" }
tokio = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
serde_yaml = { workspace = true }
which = { workspace = true }
tiktoken-rs = { workspace = true }
tokio-util = "0.7"
rand = "0.9"
rusqlite = { workspace = true }
scraper = { workspace = true }
cron = { workspace = true }
regex = { workspace = true }
pdf-extract = { workspace = true }
shellexpand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = "0.22"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
chromiumoxide = { workspace = true }
unicode-normalization = { workspace = true }
notify = { workspace = true }
image = { workspace = true }
async-trait = "0.1"
tempfile = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
