[package]
name = "tamagotchi-customizations"
description = "Integration marketplace: curated templates for messaging, email, and productivity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
