[package]
name = "tamagotchi-gateway"
description = "Webhook gateway for messaging channel integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tamagotchi-core = { path = "../core" }
tamagotchi-tools = { path = "../tools" }
tamagotchi-sandbox = { path = "../sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
regex = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
tokio-util = "0.7"
uuid = { workspace = true }
rand = "0.9"
futures = "0.3"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
