[package]
name = "borg-gateway"
description = "Webhook gateway for messaging channel integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borg-core = { path = "../core" }
borg-tools = { path = "../tools" }
borg-sandbox = { path = "../sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
subtle = "2.6"
regex = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
tokio-util = "0.7"
uuid = { workspace = true }
rand = "0.9"
futures = "0.3"
chrono = { workspace = true }
sha1 = "0.10"
serde_urlencoded = "0.7"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
