[package]
name = "borg-gateway"
description = "Webhook gateway for messaging channel integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borg-core = { path = "../core" }
borg-plugins = { path = "../plugins" }
borg-sandbox = { path = "../sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = "0.4"
subtle = "2.6"
regex = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
sha1 = "0.10"
serde_urlencoded = "0.7"
base64 = { workspace = true }
ed25519-dalek = { version = "2", features = ["std"] }
url = "2"
scraper = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
