[package]
name = "borg-heartbeat"
description = "Proactive heartbeat scheduler for Borg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
borg-core = { path = "../core" }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cron = { workspace = true }

[lints]
workspace = true
