[package]
name = "borg-sandbox"
description = "macOS Seatbelt and Linux Bubblewrap sandboxing for Borg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
