[package]
name = "tamagotchi-tools"
description = "Tool manifest parsing, registry, and subprocess execution for Tamagotchi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tamagotchi-sandbox = { path = "../sandbox" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
